Updated to build correctly and use wrapper

--- a/example-service-api/build.gradle
+++ b/example-service-api/build.gradle
@@ -6,7 +6,7 @@ jar {
     }
 }
 
-// publish API and IMPL to Maven
+// publish API to Maven
 publishing {
     publications {
         api(MavenPublication) {
