--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,12 @@
-group = 'com.asteroid.duck'
-version = '1.0.0-SNAPSHOT'
+allprojects {
+    group = 'com.asteroid.duck.osgi.test'
+    version = '1.0.0'
+}
 
 subprojects {
+
     apply plugin: 'java'
+    apply plugin: 'osgi'
     apply plugin: 'maven-publish'
 
     repositories {
