New test bundles

--- a/album-service-api/build.gradle
+++ b/album-service-api/build.gradle
@@ -2,18 +2,12 @@ plugins {
     id "com.jfrog.bintray" version "1.7"
 }
 
-description = 'Underworld Album Data : OSGi service implementation'
+description =  'Album Data : OSGi service API'
 
-dependencies {
-    compile 'org.osgi:org.osgi.core:4.+'
-    compile project(':album-service-impl')
-}
 
 jar {
     manifest {
-        instructionReplace 'Bundle-Activator', 'com.asteroid.duck.osgi.example.underworld.impl.Activator'
         instructionReplace 'Bundle-Name', "$project.description"
-        instructionReplace 'Private-Package', 'com.asteroid.duck.osgi.example.underworld.impl'
     }
 }
 
